--- a/jemdoc.css
+++ b/jemdoc.css
@@ -17,7 +17,7 @@ html {
   background-color: #eeeeee; 
 }
 
-body { 
+# body { 
   background-color: #ffffff; 
   text-align:left; /* for IE */
   margin-top: 30px; 
@@ -29,6 +29,19 @@ body {
   padding-top: 10px;
   padding-bottom: 30px;
   max-width: 960px;
+}
+
+
+body {
+    background: white;
+    font-family: Georgia, serif;
+    margin-top: 30px; 
+    margin-bottom: 30px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left:  5px;
+    padding-right: 5px;
+    margin: 0;
 }
 
 #layout-menu {
